# nbpages

./: LICENSE  README.md  README.rst  exercise.ipynb  files.txt  ma.ipynb  nbpages.cfg  nbpages.cfg.backup-2020-06-02-13-15-23  nbpages.cfg.backup-2020-06-06-18-18-03  setup.cfg  setup.py
docs/: 01.00-Style-Guide.html  01.00-Style-Guide.ipynb  01.01-Notebook-Naming-and-Ancillary-Files.html  01.01-Notebook-Naming-and-Ancillary-Files.ipynb  01.02-Notebook-Style.html  01.02-Notebook-Style.ipynb  01.03-External-Files.html  01.03-External-Files.ipynb  01.04-Coding.html  01.04-Coding.ipynb  02.00-Examples.html  02.00-Examples.ipynb  02.00-Usage.html  02.00-Usage.ipynb  02.01-Tagging.html  02.01-Tagging.ipynb  02.02-Examples.html  02.02-Examples.ipynb  02.03-Heirarchical-Tagging.html  02.03-Heirarchical-Tagging.ipynb  02.04-Working-with-Data-and-Figures.html  02.04-Working-with-Data-and-Figures.ipynb  02.05-Examples.html  02.05-Examples.ipynb  02.05-Lint.html  02.05-Lint.ipynb  02.06-Heirarchical-Tagging.html  02.06-Heirarchical-Tagging.ipynb  README.md  _config.yml  data_index.html  figure_index.html  index.md  python_index.html  tag_index.html  tag_index.md  toc.html  toc.ipynb  toc.md
html/: 01.00-Style-Guide.html  02.00-Examples.html  toc.ipynb  toc.md
in-development/: nbcollection_html.py
nbcollection/: __init__.py  __main__.py  configure.py  nbcollection.py
nbpages/: __init__.py  __main__.py  config.py  nbcollection.py  nbsetup.py  setup.py
notebooks-dev/: 01.00-Style-Guide.ipynb  01.02-Notebook-Style.ipynb  01.03-External-Files.ipynb  01.04-Coding.ipynb
(+99 files in other folders)
