[metadata]
name = nbpaages
version = 0.0.1.dev12
license = MIT
url = https://github.com/jckantor/nbpages/
description = Tools to maintain a repository of Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
author = Jeffrey Kantor
author_email = Kantor.1@nd.edu
classifiers=
   Development Status :: 4 - Beta
   Framework :: Jupyter
   Intended Audience :: Education
   Programming Language :: Python :: 3

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   nbconvert
   nbformat
   notedown

[options.packages.find]
where=src